--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<p>I'm an aspiring <strong>marketing specialist. </strong> </p>
 				<p>My taste for <stong>new adventures</stong> and my <strong>creative spirit</strong> have always pushed me to give the best of myself <br> to bring a <strong>fresh perspective</strong> to each new challenge on my journey.<br>
 				Teamwork is relatively important for me, I consider it a key factor for success, especially in companies.</p>
-				<p>I am currently doing my Master 2 in work-study, as a marketing research manager in the M6 group's advertising sales agency.</p>
+				<p>I am currently doing my Master 2 in work-study, as a marketing product manager in the M6 group's advertising sales agency.</p>
 			</div>
 
 			<div class="download">
@@ -93,14 +93,14 @@
 					<p>Master’s degree in Digital Marketing, based in Paris ๑ 2016 - 2020</p>
 				</div>
 			<p>⊷ 4 years (including a placement year) of Business administration: Marketing, Law, HR, Economy, Web programming... <br>
-			⊶ <strong>Master courses</strong>: ecosystem of digital marketing, social media marketing, CRM, multi-channel marketing, operational marketing, web analytics, HTML/CSS.</p>
+			⊶ <strong>Master courses</strong>: ecosystem of digital marketing, social media marketing, CRM, multi-channel marketing, operational marketing, digital projects, HTML/CSS.</p>
 
 			<h4>NATIONAL CHENG KUNG UNIVERSITY</h4>
 				<div class="details-in-pink">
 					<p>International exchange in Tainan, TAIWAN ๑ September 2018 - January 2019</p>
 				</div>
 			<p>⊷ International placement year: International Business Master’s Degree <br>
-			⊶ <strong>« Global immersion »</strong>: challenge with the aim of building a marketing campaign for the product of a local company. </p>
+			⊶ <strong>« Global immersion »</strong>: challenge with the aim of building a marketing campaign for the launch of a local company's product on the Japanase and Korean market. </p>
 
 			<h4>LYCÉE CAMILLE GUÉRIN</h4>
 				<div class="details-in-pink">
@@ -118,7 +118,7 @@
 					<div class="details-in-pink">
 						<p>Marketing Research Manager  ๑  September 2019 - present</p>
 					</div>
-			<p>➳ Implementation of studies and arguments to help selling the advertising space on the channels of the M6 Group, in collaboration with the sales team<br>
+			<p>➳ Implementation of studies and arguments to help selling the advertising space on the channels of the M6 Group, with a custom-made storytelling for each advertiser<br>
 			➳ Construction of commercial proposals highlighting the group's TV and digital assets in coordination with the sales, production, legal and planning teams<br>
 			➳ Monitoring and analysis of audience indicators and programme performance (TV/Digital) <br>
 				➳ Carrying out competitive monitoring of the media and digital universes and analysis of advertisers' strategies</p>
@@ -128,7 +128,7 @@
 						<p>Product Manager Assistant ๑  February 2019 - August 2019</p>
 					</div>
 			<p>➳ Management of the internal and external structure of the products <br>
-			➳ Optimization of the range of products before bringing to market, iconographic choices<br>
+			➳ Optimization of the range of products before bringing to market, iconographic choices for the whole pack<br>
 			➳ Update of website contents via internal software (Rowbx)<br> 
 			➳ Market research comparing Wonderbox products against the competition and conception of a study concerning new market tendencies and potential areas of development for the brand </p>
 
