--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					    </div>
 					  </div>
 					  <div class="progressBar">
-					    <h4>Microsoft Office 365</h4>
+					    <h4>Microsoft Office (Word, PPT, Excel, OneNote)</h4>
 					    <div class="progressBarContainer">
 					      <div class="progressBarValue value-90"></div>
 					    </div>
