--- a/index.html
+++ b/index.html
@@ -247,35 +247,12 @@
 		<h2 class="rubriques-titres">CONTACT</h2>
 
 		  <div>
-                  <p class="contact-text">Feel free to contact me via this form (linked directly to my email address: <strong>charlotte.grignon@outlook.fr</strong>).<br> I am at your disposal to answer to any of your questions and it would be my pleasure  to add any additional details about my competences and experiences. 
+                  <p class="contact-text">Feel free to contact me via my email address: <strong>charlotte.grignon@outlook.fr</strong>.<br> I am at your disposal to answer to any of your questions and it would be my pleasure to add any additional details about my competences and experiences. 
                   </p>
 
             </div>
 
-			<div class="contact-box">
-			<!-- <div id="after_submit"></div>
-				<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
-			  <div class="row">
-			    <label class="required" for="name">Your name:</label><br />
-			    <input id="name" class="input" name="name" type="text" value="" size="30" /><br />
-			    <span id="name_validation" class="error_message"></span>
-			  </div>
-			  <div class="row">
-			    <label class="required" for="email">Your email:</label><br />
-			    <input id="email" class="input" name="email" type="text" value="" size="30" /><br />
-			    <span id="email_validation" class="error_message"></span>
-			  </div>
-			  <div class="row">
-			    <label class="required" for="message">Your message:</label><br />
-			    <textarea id="message" class="input" name="message" rows="7" cols="30"></textarea><br />
-			    <span id="message_validation" class="error_message"></span>
-			  </div>
-			    
-			    <input id="submit_button" type="submit" value="Send email" />
-				</form>
-			</div> -->
-			<div class="typeform-widget" data-url="https://charlottegrignon.typeform.com/to/ZYYSLh" style="width: 50%; height: 400px; margin-left: 25%;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=ZYYSLh&utm_source=typeform.com-14885804-Free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
-		</div>
+			
 
 	</div>
 
